# dais24-hackaton

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: dressme-luxury-fashion-rag.ipynb
